<resources>
    <string name="app_name">Air Distance</string>
    <string name="app_name_split">Air\nDistance</string>

    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="use_location">Use my location</string>
    <string name="choose_map">Choose on map</string>
    <string name="place_not_found">Could\'nt find this place</string>

    <string name="tap_on_map">Tap anywhere on map to add marker.\nTap and hold to move marker</string>
    <string name="distance_msg">Distance : %1$.2f %2$s</string>
    <string name="distance_in">Distance in</string>
    <string name="average_time">Average Time : %1s</string>
    <plurals name="hours">
        <item quantity="one">%1d Hour</item>
        <item quantity="other">%1d Hours</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">%1d Minute</item>
        <item quantity="other">%1d Minutes</item>
    </plurals>

    <string name="history">History</string>
    <string name="clear_history">Clear History</string>
    <string name="nothing">Nothing to show!</string>

    <string name="drawer_open">History Open</string>
    <string name="drawer_close">History Close</string>

    <string name="to">to</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure">Are you sure?</string>

    <string name="location_permission_title">Location Permission Needed</string>
    <string name="location_permission_message">To select your location, allow AirDistance access
        to your location.\n\nSettings > Permission > Turn On Location permission.</string>
    <string name="settings">Settings</string>
    <string name="not_now">Not Now</string>

    <string name="map_type">Map Type</string>

    <string name="turn_on_gps">Turn on GPS</string>
    <string name="ok">OK</string>

</resources>
