<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/slider"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/historyLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/history"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/clearHistory"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/clear_history"
        android:focusable="true"
        android:onClick="clearHistoryButtonClicked"
        android:src="@drawable/delete_icon"
        app:layout_constraintBottom_toBottomOf="@id/historyLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/historyLabel" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/headerSep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="historyLabel,clearHistory" />

    <TextView
        android:id="@+id/borderLine"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:background="#cc757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerSep" />

    <ListView
        android:id="@+id/historyList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/borderLine"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/nothingToShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nothing"
        android:textSize="25sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/historyLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>
