<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:padding="5dp">

    <TextView
        android:id="@+id/src"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/app_name"
        android:textAlignment="textEnd"
        android:textColor="@color/colorAccent"
        android:textSize="13sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toTopOf="@id/barrier"
        app:layout_constraintEnd_toStartOf="@id/to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/barrier"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/dst"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/app_name"
        android:textAlignment="textStart"
        android:textColor="@color/colorAccent"
        android:textSize="13sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@id/barrier"
        app:layout_constraintEnd_toStartOf="@id/delete_icon"
        app:layout_constraintStart_toEndOf="@id/to"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="src,dst,to" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@id/delete_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier" />

    <ImageView
        android:id="@+id/delete_icon"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/delete"
        android:focusable="true"
        android:src="@drawable/close_icon"
        android:tint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/srcLL"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/dstLL"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>