<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- controls panel -->
    <LinearLayout
        android:id="@+id/controlsPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/controlToggleButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- source panel -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sourcePanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_background"
            android:descendantFocusability="beforeDescendants"
            android:elevation="5dp"
            android:focusableInTouchMode="true"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp">

            <ProgressBar
                android:id="@+id/sourceProgressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintBottom_toBottomOf="@id/sourceInput"
                app:layout_constraintEnd_toEndOf="@id/sourcePanel"
                app:layout_constraintTop_toTopOf="@id/sourceInput" />

            <ImageView
                android:id="@+id/sourceCloseIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@android:string/cancel"
                android:onClick="clearSourceClicked"
                android:src="@drawable/close_grey_icon"
                app:layout_constraintBottom_toBottomOf="@id/sourceInput"
                app:layout_constraintEnd_toEndOf="@id/sourcePanel"
                app:layout_constraintTop_toTopOf="@id/sourceInput" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/sourceStatusBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="start"
                app:constraint_referenced_ids="sourceProgressBar,sourceCloseIcon" />

            <AutoCompleteTextView
                android:id="@+id/sourceInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/source"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/sourceStatusBarrier"
                app:layout_constraintStart_toStartOf="@id/sourcePanel"
                app:layout_constraintTop_toTopOf="@id/sourcePanel" />

            <TextView
                android:id="@+id/sourceNotFound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_not_found"
                android:textSize="12sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="@id/sourceInput"
                app:layout_constraintTop_toBottomOf="@id/sourceInput" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/sourceInputBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="sourceInput,sourceNotFound" />

            <TextView
                android:id="@+id/useSourceLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/location_icon"
                android:drawablePadding="5dp"
                android:text="@string/use_location"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/sourcePanel"
                app:layout_constraintStart_toStartOf="@id/sourcePanel"
                app:layout_constraintTop_toBottomOf="@id/sourceInputBarrier" />

            <TextView
                android:id="@+id/useSourceOnMap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/marker_icon"
                android:drawablePadding="5dp"
                android:text="@string/choose_map"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/sourcePanel"
                app:layout_constraintEnd_toEndOf="@id/sourcePanel"
                app:layout_constraintStart_toStartOf="@id/sourcePanel"
                app:layout_constraintTop_toBottomOf="@id/useSourceLocation" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- destination panel -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/destinationPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_background"
            android:elevation="5dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp">

            <ProgressBar
                android:id="@+id/destinationProgressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintBottom_toBottomOf="@id/destinationInput"
                app:layout_constraintEnd_toEndOf="@id/destinationPanel"
                app:layout_constraintTop_toTopOf="@id/destinationInput" />

            <ImageView
                android:id="@+id/destinationCloseIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@android:string/cancel"
                android:onClick="clearDestinationClicked"
                android:src="@drawable/close_grey_icon"
                app:layout_constraintBottom_toBottomOf="@id/destinationInput"
                app:layout_constraintEnd_toEndOf="@id/destinationPanel"
                app:layout_constraintTop_toTopOf="@id/destinationInput" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/destinationStatusBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="start"
                app:constraint_referenced_ids="destinationProgressBar,destinationCloseIcon" />

            <AutoCompleteTextView
                android:id="@+id/destinationInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:hint="@string/destination"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/destinationStatusBarrier"
                app:layout_constraintStart_toStartOf="@id/destinationPanel"
                app:layout_constraintTop_toTopOf="@id/destinationPanel" />

            <TextView
                android:id="@+id/destinationNotFound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_not_found"
                android:textSize="12sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="@id/destinationInput"
                app:layout_constraintTop_toBottomOf="@id/destinationInput" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/destinationInputBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="destinationInput,destinationNotFound" />

            <TextView
                android:id="@+id/useDestinationLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/location_icon"
                android:drawablePadding="5dp"
                android:text="@string/use_location"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/destinationPanel"
                app:layout_constraintStart_toStartOf="@id/destinationPanel"
                app:layout_constraintTop_toBottomOf="@id/destinationInputBarrier" />

            <TextView
                android:id="@+id/useDestinationOnMap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/marker_icon"
                android:drawablePadding="5dp"
                android:text="@string/choose_map"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/destinationPanel"
                app:layout_constraintEnd_toEndOf="@id/destinationPanel"
                app:layout_constraintStart_toStartOf="@id/destinationPanel"
                app:layout_constraintTop_toBottomOf="@id/useDestinationLocation" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/controlToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/keyboard_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/controlsBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="controlToggleButton,controlsPanel"
        tools:layout_editor_absoluteY="106dp" />

    <TextView
        android:id="@+id/distanceMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#88000000"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/controlsBarrier" />

    <TextView
        android:id="@+id/tapOnMapMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/tap_on_map"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>